--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,4 +10,11 @@
         android:title="@string/action_settings"
         app:showAsAction="ifRoom"/>
 
+    <item
+        android:id="@+id/action_info"
+        android:orderInCategory="200"
+        android:icon="@drawable/ic_info_outline_black_36dp"
+        android:title="@string/action_info"
+        app:showAsAction="ifRoom"/>
+
 </menu>
