Implement BIP-0020 and BIP-0021. Extra info with addresses for payment requests.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -16,4 +16,5 @@
     <item type="id" name="openScanner" />
     <item type="id" name="enterPaymentDetails" />
     <item type="id" name="importSeed" />
+    <item type="id" name="addRequestAmount" />
 </resources>
