--- a/app/src/main/res/layout/receive.xml
+++ b/app/src/main/res/layout/receive.xml
@@ -13,24 +13,87 @@
         android:gravity="center"
         android:padding="5dp"
         android:textAlignment="center"
-        android:text="@string/receive_address"/>
+        android:text="@string/receive_payment_code"/>
 
     <ImageView
-        android:id="@+id/addressImage"
+        android:id="@+id/image"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:contentDescription="@string/address_qr_code"/>
+        android:contentDescription="@string/payment_code_qr"/>
 
     <TextView
-        android:paddingTop="10dp"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/tap_to_copy"/>
 
     <TextView
-        android:id="@+id/addressText"
+        android:id="@+id/paymentCode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onClick"/>
+
+    <TextView
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/SubHeadingText"
+        android:textAlignment="center"
+        android:text="@string/optional"/>
+
+    <RelativeLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start">
+
+        <TextView
+            android:id="@+id/amountLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/request_amount"
+            android:labelFor="@id/requestAmount"
+            android:textStyle="bold"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginEnd="10dp"/>
+
+        <EditText
+            android:id="@+id/requestAmount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/amountLabel"
+            android:layout_toStartOf="@id/units"/>
+
+        <Spinner
+            android:id="@+id/units"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"/>
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_gravity="start">
+        <TextView
+            android:id="@+id/satoshiAmountLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="@string/bitcoins"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/satoshiAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0 00 000 000"/>
+    </LinearLayout>
 
 </LinearLayout>
