Clean up UX on suggestion from Chris.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item type="id" name="addWallet" />
+    <item type="id" name="editWallet" />
     <item type="id" name="buyFromCoinbase" />
     <item type="id" name="createWallet" />
     <item type="id" name="recoverWallet" />
