--- a/app/src/main/res/layout/receive.xml
+++ b/app/src/main/res/layout/receive.xml
@@ -15,6 +15,12 @@
         android:textAlignment="center"
         android:text="@string/receive_payment_code"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:text="@string/receive_description"/>
+
     <ImageView
         android:id="@+id/image"
         android:layout_width="300dp"
