--- a/app/src/main/res/layout/receive.xml
+++ b/app/src/main/res/layout/receive.xml
@@ -47,22 +47,20 @@
         android:textAlignment="center"
         android:text="@string/optional"/>
 
+    <TextView
+        android:id="@+id/amountLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/request_amount"
+        style="@style/SubHeadingText"
+        android:textAlignment="textStart"
+        android:layout_marginTop="20dp"/>
+
     <RelativeLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start">
-
-        <TextView
-            android:id="@+id/amountLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/request_amount"
-            android:labelFor="@id/requestAmount"
-            android:textStyle="bold"
-            android:layout_centerVertical="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginEnd="10dp"/>
 
         <EditText
             android:id="@+id/requestAmount"
@@ -101,5 +99,36 @@
             android:layout_height="wrap_content"
             android:text="0 00 000 000"/>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/labelLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/label"
+        android:labelFor="@id/label"
+        style="@style/SubHeadingText"
+        android:textAlignment="textStart"
+        android:layout_marginTop="20dp"/>
+
+    <EditText
+        android:id="@+id/label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/messageLabel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/message"
+        android:labelFor="@id/message"
+        style="@style/SubHeadingText"
+        android:textAlignment="textStart"
+        android:layout_marginTop="20dp"/>
+
+    <EditText
+        android:id="@+id/message"
+        android:inputType="text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
