--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -17,5 +17,5 @@
     <item type="id" name="openScanner" />
     <item type="id" name="enterPaymentDetails" />
     <item type="id" name="importSeed" />
-    <item type="id" name="addRequestAmount" />
+    <item type="id" name="updateRequestPaymentCode" />
 </resources>
