--- a/app/src/main/res/layout/receive.xml
+++ b/app/src/main/res/layout/receive.xml
@@ -54,6 +54,7 @@
         android:text="@string/request_amount"
         style="@style/SubHeadingText"
         android:textAlignment="textStart"
+        android:labelFor="@id/requestAmount"
         android:layout_marginTop="20dp"/>
 
     <RelativeLayout
@@ -68,7 +69,7 @@
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:layout_centerVertical="true"
-            android:layout_toEndOf="@id/amountLabel"
+            android:layout_alignParentStart="true"
             android:layout_toStartOf="@id/units"/>
 
         <Spinner
