--- a/app/src/main/res/layout/wallet_item.xml
+++ b/app/src/main/res/layout/wallet_item.xml
@@ -128,7 +128,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toStartOf="@+id/walletEdit"
+                android:layout_alignParentEnd="true"
                 android:src="@drawable/ic_history_black_36dp"
                 android:padding="5dp"
                 android:layout_marginEnd="5dp"
