Implement BIP-0070 payment requests. (via https)

--- a/app/src/main/res/layout/send_payment.xml
+++ b/app/src/main/res/layout/send_payment.xml
@@ -55,6 +55,12 @@
         android:visibility="gone"/>
 
     <TextView
+        android:id="@+id/expires"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
+    <TextView
         android:id="@+id/sendMax"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
