Add confirmation count to outpoints for choosing UTXOs to spend.

--- a/app/src/main/res/layout/transaction.xml
+++ b/app/src/main/res/layout/transaction.xml
@@ -74,8 +74,7 @@
     <TextView
         android:id="@+id/transactionStatus"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/SubHeadingText"/>
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:layout_width="match_parent"
