Add option to use pending UTXOs when sending payments. Consolidate some payment details into payment request object.

--- a/app/src/main/res/layout/info.xml
+++ b/app/src/main/res/layout/info.xml
@@ -182,6 +182,14 @@
 
     <TextView
         style="@style/Question"
+        android:text="@string/why_does_it_say_i_need_to_use_pending"/>
+
+    <TextView
+        style="@style/Answer"
+        android:text="@string/why_does_it_say_i_need_to_use_pending_answer"/>
+
+    <TextView
+        style="@style/Question"
         android:text="@string/what_are_the_units"/>
 
     <TextView
