--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#f3b5</color>
     <color name="colorPrimaryDark">#f082</color>
     <color name="colorButton">#f13b</color>
+    <color name="buttonText">#ffff</color>
     <color name="colorButtonNegative">#fc32</color>
     <color name="colorButtonLight">#f59c</color>
     <color name="colorNotification">#ff93</color>
@@ -17,4 +18,5 @@
     <color name="textNegativeLight">#f810</color>
     <color name="textWarning">#fa90</color>
     <color name="textPositive">#f180</color>
+    <color name="heading">#f666</color>
 </resources>
