--- a/app/src/main/res/layout/negative_button.xml
+++ b/app/src/main/res/layout/negative_button.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textStyle="bold"
-            android:textColor="#fff"
+            android:textColor="@color/buttonText"
             android:textAlignment="center"/>
 
     </LinearLayout>
