Update so hitting the "enter" key on the keyboard performs appropriate functions.

--- a/app/src/main/res/layout/enter_payment_code.xml
+++ b/app/src/main/res/layout/enter_payment_code.xml
@@ -26,7 +26,8 @@
             android:layout_height="wrap_content"
             android:inputType="textNoSuggestions"
             android:maxLines="1"
-            android:minWidth="200dp"/>
+            android:minWidth="200dp"
+            android:imeOptions="actionDone"/>
     </HorizontalScrollView>
 
 </LinearLayout>
