--- a/app/src/main/res/layout/passcode.xml
+++ b/app/src/main/res/layout/passcode.xml
@@ -30,7 +30,8 @@
             android:id="@+id/passcode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="numberPassword"/>
+            android:inputType="numberPassword"
+            android:imeOptions="actionDone"/>
 
     </LinearLayout>
 
