--- a/app/src/main/res/drawable/negative_button_background.xml
+++ b/app/src/main/res/drawable/negative_button_background.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorButtonNegative"/>
-    <stroke android:width="3dp" android:color="@color/colorButtonNegative" />
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <gradient
+        android:startColor="@color/colorButtonNegative"
+        android:endColor="@color/colorButtonNegativeEnd"
+        android:centerY="0.75"
+        android:angle="90"/>
     <corners android:radius="5dp"/>
-    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
