--- a/app/src/main/res/layout/button.xml
+++ b/app/src/main/res/layout/button.xml
@@ -13,9 +13,10 @@
         android:padding="10dp"
         android:layout_margin="10dp"
         android:background="@drawable/button_background"
+        android:minWidth="200dp"
         android:onClick="onClick"
         android:gravity="center"
-        android:minWidth="200dp">
+        android:text="Test Button">
 
         <ImageView
             android:id="@+id/image"
@@ -32,7 +33,8 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textStyle="bold"
             android:textColor="@color/buttonText"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:text="Test"/>
 
     </LinearLayout>
 
