--- a/app/src/main/res/layout/initial_block_download_message.xml
+++ b/app/src/main/res/layout/initial_block_download_message.xml
@@ -4,7 +4,7 @@
     android:id="@+id/initialBlockDownloadMessage"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="10dp">
 
     <TextView
