--- a/app/src/main/res/layout/wallet_history.xml
+++ b/app/src/main/res/layout/wallet_history.xml
@@ -22,13 +22,31 @@
             android:paddingStart="20dp"
             android:paddingEnd="10dp">
 
-            <TextView
+            <LinearLayout
                 android:id="@+id/walletPendingTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="@string/pending_transactions"
-                style="@style/HeadingText"/>
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="5dp"
+                    android:src="@drawable/baseline_timer_black_36dp"
+                    android:contentDescription="@string/pending"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pending_transactions"
+                    style="@style/HeadingText"/>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/walletPendingSubTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/pending_transactions_description"
+                style="@style/SmallHeadingText"/>
 
             <LinearLayout
                 android:id="@+id/walletPending"
