--- a/app/src/main/res/layout/wallet_item.xml
+++ b/app/src/main/res/layout/wallet_item.xml
@@ -28,6 +28,15 @@
             android:padding="5dp"
             android:contentDescription="@string/expand_compress"/>
 
+        <ImageView
+            android:id="@+id/walletPendingIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/baseline_timer_white_36dp"
+            android:gravity="center_vertical"
+            android:padding="5dp"
+            android:contentDescription="@string/pending"/>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,8 +98,7 @@
         android:orientation="vertical"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:visibility="gone">
+        android:layout_marginBottom="10dp">
 
         <RelativeLayout
             android:id="@+id/walletControls"
@@ -155,12 +163,31 @@
             android:orientation="vertical"
             android:paddingStart="15dp">
 
-            <TextView
+            <LinearLayout
                 android:id="@+id/walletPendingTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/pending_transactions"
-                style="@style/HeadingText"/>
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="5dp"
+                    android:src="@drawable/baseline_timer_black_36dp"
+                    android:contentDescription="@string/pending"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pending_transactions"
+                    style="@style/HeadingText"/>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/walletPendingSubTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/pending_transactions_description"
+                style="@style/SmallHeadingText"/>
 
             <LinearLayout
                 android:id="@+id/walletPending"
