--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="colorPositive">#f4b4</color>
     <color name="colorNegative">#fc66</color>
     <color name="rowShade">#feee</color>
-    <color name="warningBackground">#fec1</color>
+    <color name="warningBackground">#6ee1</color>
     <color name="warningText">#fc66</color>
     <color name="messageBackground">#ffff</color>
     <color name="messageText">#f000</color>
