--- a/app/src/main/res/layout/receive.xml
+++ b/app/src/main/res/layout/receive.xml
@@ -39,101 +39,109 @@
         android:layout_height="wrap_content"
         android:onClick="onClick"/>
 
-    <TextView
-        android:layout_marginTop="20dp"
+    <LinearLayout
+        android:id="@+id/optionalReceive"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/SubHeadingText"
-        android:textAlignment="center"
-        android:text="@string/optional"/>
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/amountLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/request_amount"
-        style="@style/SubHeadingText"
-        android:textAlignment="textStart"
-        android:labelFor="@id/requestAmount"
-        android:layout_marginTop="20dp"/>
-
-    <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start">
-
-        <EditText
-            android:id="@+id/requestAmount"
+        <TextView
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal"
-            android:layout_centerVertical="true"
-            android:layout_alignParentStart="true"
-            android:layout_toStartOf="@id/units"
-            android:imeOptions="actionDone"/>
+            style="@style/SubHeadingText"
+            android:textAlignment="center"
+            android:text="@string/optional"/>
 
-        <Spinner
-            android:id="@+id/units"
+        <TextView
+            android:id="@+id/amountLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/request_amount"
+            style="@style/SubHeadingText"
+            android:textAlignment="textStart"
+            android:labelFor="@id/requestAmount"
+            android:layout_marginTop="20dp"/>
+
+        <RelativeLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start">
+
+            <EditText
+                android:id="@+id/requestAmount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@id/units"
+                android:imeOptions="actionDone"/>
+
+            <Spinner
+                android:id="@+id/units"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"/>
+
+        </RelativeLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"/>
+            android:layout_gravity="start">
+            <TextView
+                android:id="@+id/satoshiAmountLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:text="@string/bitcoins"
+                android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/satoshiAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0 00 000 000"/>
+        </LinearLayout>
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/labelLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/label"
+            android:labelFor="@id/label"
+            style="@style/SubHeadingText"
+            android:textAlignment="textStart"
+            android:layout_marginTop="20dp"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_gravity="start">
-        <TextView
-            android:id="@+id/satoshiAmountLabel"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/label"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:text="@string/bitcoins"
-            android:textStyle="bold"/>
+            android:inputType="text"
+            android:imeOptions="actionDone"/>
+
         <TextView
-            android:id="@+id/satoshiAmount"
-            android:layout_width="wrap_content"
+            android:id="@+id/messageLabel"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="0 00 000 000"/>
+            android:text="@string/message"
+            android:labelFor="@id/message"
+            style="@style/SubHeadingText"
+            android:textAlignment="textStart"
+            android:layout_marginTop="20dp"/>
+
+        <EditText
+            android:id="@+id/message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:imeOptions="actionDone"/>
+
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/labelLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/label"
-        android:labelFor="@id/label"
-        style="@style/SubHeadingText"
-        android:textAlignment="textStart"
-        android:layout_marginTop="20dp"/>
-
-    <EditText
-        android:id="@+id/label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:imeOptions="actionDone"/>
-
-    <TextView
-        android:id="@+id/messageLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/message"
-        android:labelFor="@id/message"
-        style="@style/SubHeadingText"
-        android:textAlignment="textStart"
-        android:layout_marginTop="20dp"/>
-
-    <EditText
-        android:id="@+id/message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:imeOptions="actionDone"/>
 
 </LinearLayout>
