--- a/app/src/main/res/layout/wallet_transaction.xml
+++ b/app/src/main/res/layout/wallet_transaction.xml
@@ -3,28 +3,47 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
     android:padding="5dp"
     android:id="@+id/walletTransaction"
     android:onClick="onClick">
 
-    <TextView
-        android:id="@+id/amount"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        style="@style/SubHeadingText"
-        android:textAlignment="textEnd"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            style="@style/SubHeadingText"
+            android:textAlignment="textEnd"
+            android:text="$1.25"/>
+
+        <TextView
+            android:id="@+id/bitcoinAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:textAlignment="textEnd"
+            android:text="0 123 456 789"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        style="@style/SubHeadingText"/>
+        android:layout_gravity="center_vertical"
+        style="@style/SubHeadingText"
+        android:text="just now"/>
 
     <TextView
         android:id="@+id/count"
@@ -33,6 +52,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         style="@style/SubHeadingText"
-        android:textAlignment="textEnd"/>
+        android:textAlignment="textEnd"
+        android:layout_gravity="center_vertical"
+        android:text="9+"/>
 
 </LinearLayout>
